refactor: rewrite th_test.R, update thSeries.R, clean up package metadata
th_test.R: replaced legacy test scaffolding with modern equivalents
- generate_example_aquifer/series/observed replace old camelCase versions
- test_round_trip() returns tidy tibble with relative errors
- Uses purrr throughout (map, imap, pmap, imap_dfr)
- Removed laggedLinearFit references (parameter no longer exists)
- All 15 round-trip tests pass (max error 1.6e-4)

thSeries.R: already refactored in prior session (explicit constructors,
purrr, .temperheic() removed, laggedLinearFit removed)

DESCRIPTION: added Encoding: UTF-8, RoxygenNote updated to 7.3.3
NAMESPACE: regenerated - old exports removed, new exports added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,22 +2,16 @@
 
 S3method(print,temperheic)
 S3method(print,thUnits)
-export(as.xts.thSeries)
-export(as.zoo.thSeries)
-export(generateExampleThAquifer)
-export(generateExampleThObservedSeries)
-export(generateExampleThSeries)
-export(htPlot)
+export(generate_example_aquifer)
+export(generate_example_observed)
+export(generate_example_series)
 export(is.temperheic)
 export(is.thAquifer)
 export(is.thBoundary)
 export(is.thHydro)
 export(is.thSignal)
 export(is.thUnits)
-export(laggedData)
-export(laggedMSR)
-export(laggedModel)
-export(testForwardBackward)
+export(test_round_trip)
 export(thAquifer)
 export(thBoundary)
 export(thHydro)
