--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,7 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
+Encoding: UTF-8
 LazyData: TRUE
-RoxygenNote: 6.1.1
+RoxygenNote: 7.3.3
+Imports: zoo, purrr, stats
