--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 7.3.3
-Imports: zoo, purrr, stats
+Imports: zoo, purrr, stats, tibble
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
