Add FFT fit method, composite boundary, seasonal window analysis
- R/fit_fft.R: FFT spectral extraction at nearest Fourier bin. Phase
  convention -Arg(X[k]) matches OLS exactly. Warns on >1% bin mismatch.
  Machine precision on bin-aligned synthetic data. Exported.

- R/fit_ols.R: Added @export.

- R/th_test.R: Added generate_composite_boundary() -- amplitude-modulated
  diel+annual synthetic stream temperature from Meacham Creek Channel 3
  parameters (T_mu=10.5C, A_annual=8.0C, A_diel=2.2+/-1.8C seasonal).

- R/thSeries.R: Added 'fft' to fit_method dispatch.

- tests/testthat/test-round-trip.R: 3 new FFT tests (11 total, all pass).

- scripts/testingThSeries.R: Sections 9-11 added. Composite stream temp
  visualization, OLS vs FFT amplitude extraction, and seasonal window
  analysis showing diel amplitude recovery: winter 0.42C, spring 2.12C,
  summer 3.98C, autumn 2.37C vs whole-year OLS 2.21C / FFT 2.09C.
  Demonstratech note on Pe length scale.

- NAMESPACE: Exported fit_ols and fit_fft.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(print,temperheic)
 S3method(print,thUnits)
+export(fit_fft)
+export(fit_ols)
 export(generate_example_aquifer)
 export(generate_example_observed)
 export(generate_example_series)
