Add signal processing module: detrend_temperature() and window_temperature()
New file R/signal_processing.R with two exported preprocessing functions:

detrend_temperature()
- Removes slow trend to isolate oscillatory component (diel, seasonal)
- Three methods: loess (default), moving average, polynomial
- Handles single-column and multi-column zoo objects
- Optional return_trend mode for inspection/reconstruction
- Internal workhorse .detrend_single() (not exported)

window_temperature()
- Slices zoo into overlapping temporal windows for time-varying analysis
- Returns tidy tibble with list-column of zoo windows + metadata
- Width/step in seconds (matching zoo index and ADE physics)
- min_coverage filtering drops windows with excessive NAs
- Composable: comp %>% detrend_temperature() %>% window_temperature()

Also fixes missing library(dplyr) in scripts/testingThSeries.R that
caused pipe operator not found error when sourcing.

All 11 existing round-trip tests still pass.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,temperheic)
 S3method(print,thUnits)
+export(detrend_temperature)
 export(fit_fft)
 export(fit_ols)
 export(generate_example_aquifer)
@@ -21,3 +22,4 @@ export(thObservedSeries)
 export(thSeries)
 export(thSignal)
 export(thUnits)
+export(window_temperature)
