--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 7.3.3
-Imports: zoo, purrr, stats, tibble
+Imports: zoo, purrr, stats, tibble, dplyr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
