Citation audit: add @references throughout, fix equation refs, expand test suite
Documentation:
- Add @references to thSignal (Stallman 1965, Luce et al. 2013)
- Add @references to thSeries (Stallman 1965, Luce et al. 2013)
- Add @references to thObservedSeries (Luce et al. 2013, Luce & Tonina 2017)
- Add @references to window_temperature (Vogt et al. 2012, Gariglio et al. 2013)
- Add @references to fitCosine (Luce et al. 2013)
- Add @references to generate_example_aquifer (Burns et al. 2015)
- Expand abbreviated refs in fit_fft.R to full citations with DOIs
- Add missing DOI to fit_ols.R reference
- Fix incorrect Eq. 59/60 numbers in thSeries.R (wrong numbering system);
  replaced with descriptive formula names
- Group-document is.* type-checking functions (is_temperheic.Rd)
- Export generate_composite_boundary
- Tag derived2DArray and fitCosine as @keywords internal
- Update signal_processing.R file header, standardize page range dashes
- Update test_round_trip param docs to include fft method

New tests (47 expectations across 3 files):
- test-detrend_temperature.R: trend removal accuracy, reconstruction,
  multi-column zoo, input validation
- test-signal-generators.R: composite boundary spectral content, S3
  constructor validation and bulk property math
- tety, amplitude
  agreement, nmin threshold consistency

Suite: 6 files, 105 expectations, 0 failures, 0 warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(assess_record)
 export(detrend_temperature)
 export(fit_fft)
 export(fit_ols)
+export(generate_composite_boundary)
 export(generate_example_aquifer)
 export(generate_example_observed)
 export(generate_example_series)
