Add spectral analysis module, demo scripts, and spectral stress tests
- spectral_analysis.R: compute_power(), find_peaks()
- 3 demo scripts: spectral, forward-inverse, observed data
- Tier 1 spectral stress test script
- 51 new test expectations (compute_power + spectral stress)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ S3method(print,record_assessment)
 S3method(print,temperheic)
 S3method(print,thUnits)
 export(assess_record)
+export(compute_power)
 export(detrend_temperature)
+export(find_peaks)
 export(fit_fft)
 export(fit_ols)
 export(generate_composite_boundary)
